Update_config.yml
Title and description added; theme switched to 'Kagami'

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: jekyll-theme-cayman
+title: Zita Spa
+description: A site about handmade soap designs
+
+theme: jekyll-theme-kagami
+show_downloads: false
