Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Zita Spa
 description: A site about handmade soap designs
 
-theme: jekyll-theme-kagami
+theme: jekyll-theme-cayman
 show_downloads: false
