--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
 theme: jekyll-theme-cayman
+imgdir: 'assets/img/gallery'
+baseurl: '/'
+title: Zita Spa
+email: apaiva78@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  For most people bathroom time is their alone moment,
+  their time to find fulfillment in relaxation,
+  "It's not just about cleaning and grooming,"
+  "It's about treating yourself special"
+  "We are all about beautiful skin and happy minds"
