--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ baseurl: '/'
 title: Zita Spa
 email: apaiva78@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  For most people bathroom time is their alone moment,
+  For many bathing is an alone moment,
   their time to find fulfillment in relaxation,
-  "It's not just about cleaning and grooming,"
-  "It's about treating yourself special"
-  "We are all about beautiful skin and happy minds"
+  It's not just about cleansing,
+  It's about treating yourself to something special
+  We're all about beautiful skin and happy minds
