--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-architect
 imgdir: 'assets/img/gallery'
-baseurl: '/'
+baseurl: 'zspa78.github.io/'
 title: Zita Spa
 email: apaiva78@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
